# Generated by Django 4.0.4 on 2022-05-03 06:41

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Consumidor',
            fields=[
                ('consumidor_id', models.AutoField(db_column='consumidor_id', primary_key=True, serialize=False)),
                ('nome', models.CharField(db_column='nome', max_length=120)),
                ('total', models.IntegerField(db_column='total', default=0)),
            ],
            options={
                'db_table': 'consumidor',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='MatrizGeradora',
            fields=[
                ('matriz_geradora_id', models.AutoField(db_column='matriz_geradora_id', primary_key=True, serialize=False)),
                ('nome', models.CharField(db_column='nome', max_length=120)),
                ('tipo_fonte', models.CharField(db_column='tipo_fonte', max_length=120)),
            ],
            options={
                'db_table': 'matriz_geradora',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='RegiaoAdministrativa',
            fields=[
                ('regiao_id', models.AutoField(db_column='regiao_administrativa_id', primary_key=True, serialize=False)),
                ('nome', models.CharField(db_column='nome', max_length=120)),
            ],
            options={
                'db_table': 'regiao_administrativa',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='TipoConsumidor',
            fields=[
                ('tipo_consumidor_id', models.AutoField(db_column='tipo_consumidor_id', primary_key=True, serialize=False)),
                ('nome', models.CharField(db_column='nome', max_length=100)),
                ('residencial', models.BooleanField(db_column='residencial', default=True)),
            ],
            options={
                'db_table': 'tipo_consumidor',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='UnidadeFederativa',
            fields=[
                ('uf_id', models.AutoField(db_column='unidade_federativa_id', primary_key=True, serialize=False)),
                ('nome', models.CharField(db_column='nome', max_length=100)),
                ('sigla', models.CharField(blank=True, db_column='sigla', max_length=3, null=True)),
                ('regiao', models.ForeignKey(db_column='regiao_administrativa_id', on_delete=django.db.models.deletion.CASCADE, to='analise_energetica.regiaoadministrativa')),
            ],
            options={
                'db_table': 'unidade_federativa',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='Tarifa',
            fields=[
                ('tarifa_id', models.AutoField(db_column='tarifa_id', primary_key=True, serialize=False)),
                ('periodo_inicio', models.DateTimeField(db_column='periodo_inicio', null=True)),
                ('periodo_fim', models.DateTimeField(db_column='periodo_fim', null=True)),
                ('valor', models.DecimalField(decimal_places=2, max_digits=6)),
                ('regiao', models.ForeignKey(db_column='regiao_administrativa_id', null=True, on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.regiaoadministrativa')),
                ('unidade_federativa', models.ForeignKey(db_column='unidade_federativa_id', null=True, on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.unidadefederativa')),
            ],
            options={
                'db_table': 'tarifa',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='ProducaoEnergia',
            fields=[
                ('producao_id', models.AutoField(db_column='producao_energia_id', primary_key=True, serialize=False)),
                ('periodo_inicio', models.DateTimeField(db_column='periodo_inicio', null=True)),
                ('periodo_fim', models.DateTimeField(db_column='periodo_fim', null=True)),
                ('energia_produzida', models.FloatField(db_column='energia_produzida')),
                ('matriz', models.ForeignKey(db_column='matriz_geradora_id', on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.matrizgeradora')),
                ('unidade_federativa', models.ForeignKey(db_column='unidade_federativa_id', on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.unidadefederativa')),
            ],
            options={
                'db_table': 'producao_energia',
                'managed': True,
            },
        ),
        migrations.CreateModel(
            name='Consumo',
            fields=[
                ('consumo_id', models.AutoField(db_column='consumo_id', primary_key=True, serialize=False)),
                ('consumo', models.FloatField(db_column='consumo')),
                ('periodo_inicio', models.DateTimeField(db_column='periodo_inicio', null=True)),
                ('periodo_fim', models.DateTimeField(db_column='periodo_fim', null=True)),
                ('consumidor', models.ForeignKey(db_column='consumidor_id', on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.consumidor')),
                ('tarifa_aplicada', models.ForeignKey(db_column='tarifa_id', null=True, on_delete=django.db.models.deletion.CASCADE, to='analise_energetica.tarifa')),
            ],
            options={
                'db_table': 'consumo',
                'managed': True,
            },
        ),
        migrations.AddField(
            model_name='consumidor',
            name='regiao',
            field=models.ForeignKey(db_column='regiao_administrativa_id', null=True, on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.regiaoadministrativa'),
        ),
        migrations.AddField(
            model_name='consumidor',
            name='tipo_do_consumidor',
            field=models.ForeignKey(db_column='tipo_consumidor_id', on_delete=django.db.models.deletion.CASCADE, to='analise_energetica.tipoconsumidor'),
        ),
        migrations.AddField(
            model_name='consumidor',
            name='unidade_federativa',
            field=models.ForeignKey(db_column='unidade_federativa_id', null=True, on_delete=django.db.models.deletion.DO_NOTHING, to='analise_energetica.unidadefederativa'),
        ),
    ]
